<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.prototypeunddialog.ActSecond" >

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:orientation="vertical" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <CheckBox
                android:id="@+id/cbGekauftEdit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sGekauft" />

            <ImageView
                android:id="@+id/imageView1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/otherpic" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="left" >

            <EditText
                android:id="@+id/etMenge"
                android:layout_width="45dp"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/sMenge"
                android:inputType="number" >

                <requestFocus />
            </EditText>

            <RadioGroup
                android:id="@+id/radioMasseinheit"
                android:layout_width="74dp"
                android:layout_height="wrap_content" >

                <RadioButton
                    android:id="@+id/rbLtr"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="ltr" />

                <RadioButton
                    android:id="@+id/rbKG"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="kg" />

                <RadioButton
                    android:id="@+id/rbSt"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="stk" />

                <RadioButton
                    android:id="@+id/rbPkg"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="pkg" />
            </RadioGroup>

            <EditText
                android:id="@+id/etArtikelName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:hint="@string/sArtikelBezeichnung" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="left" >

            <Button
                android:id="@+id/btSave"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sSave" />

            <Button
                android:id="@+id/btCancel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sCancel" />
        </LinearLayout>
    </LinearLayout>

</RelativeLayout>